[gd_scene load_steps=9 format=3 uid="uid://dv3w8y28l5phj"]

[ext_resource type="Script" path="res://weapons/Sniper.gd" id="1_q7d6a"]
[ext_resource type="Texture2D" uid="uid://bdyhnm7aw0x57" path="res://sprites/weapons/Sniper_Flicker.png" id="2_ysv7e"]
[ext_resource type="PackedScene" uid="uid://byexhcn7esfm1" path="res://weapons/Projectile.tscn" id="3_2jqbm"]
[ext_resource type="Texture2D" uid="uid://ddogb7gk8sfhv" path="res://sprites/weapons/Sniper_Shoot.png" id="4_y6suc"]

[sub_resource type="Animation" id="Animation_qnp9y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ysv7e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vjk8s"]
resource_name = "flicker"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ysv7e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_yw22a"]
resource_name = "shoot"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_y6suc"), ExtResource("2_ysv7e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66, 0.72, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [13, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2b4wy"]
_data = {
"RESET": SubResource("Animation_qnp9y"),
"flicker": SubResource("Animation_vjk8s"),
"shoot": SubResource("Animation_yw22a")
}

[node name="Sniper" type="Node2D"]
script = ExtResource("1_q7d6a")
projectile_scene = ExtResource("3_2jqbm")
shoot_offset = Vector2(40, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.0, 1.0)
texture = ExtResource("2_ysv7e")
hframes = 7

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2b4wy")
}

[connection signal="timeout" from="FlickerTimer" to="." method="_on_flicker_timer_timeout"] 